--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,18 @@
-.App {
-  text-align: center;
+.inputBox {
+  display: block;
+  margin: 25;
+  padding: 7px;
+  width: 300px;
+  border: 1px solid skyblue;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
 }
-
+.product {
+  margin-left: 30%;
+}
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
